--- a/MySpringBootReactProject/pom.xml
+++ b/MySpringBootReactProject/pom.xml
@@ -71,6 +71,11 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		    <version>11.0.0-M17</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
